[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerball-lab"
version = "0.2.0"
description = "Explore Powerball with visuals, interactive heatmap, and ML candidates over calendar/astro features."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
